--- a/public/sass/parts/_sidenav.scss
+++ b/public/sass/parts/_sidenav.scss
@@ -1,6 +1,6 @@
 .sidebar {
    z-index: 10;
-   background-color: var(--color-primary-white);
+   background-color: $color-primary-strong;
    margin-top: 7rem;
    //margin-right: 0.3rem;
 
@@ -40,17 +40,23 @@
       &:not(:last-child) {
          margin-bottom: 0.5rem;
       }
+
+      @media only screen and (max-width: $bp-seven) {
+         &:not(:last-child) {
+            margin-bottom: 0.5rem;
+         }
+      }
    }
 
    &__item::before {
-      box-shadow: var(--shadow-2);
+      box-shadow: var(--shadow);
       content: '';
       position: absolute;
       top: 0;
       left: 0;
       height: 100%;
       width: 0px;
-      background-color: var(--color-primary);
+      background-color: var(--color-white);
       transform-origin: left;
       transform: scaleX(0);
       transition: all 0.2s;
@@ -60,15 +66,20 @@
    &__item--active::before {
       transform: scaleX(1);
       width: 3%;
+
+      @media only screen and (max-width: $bp-seven) {
+         transform: scaleX(2);
+         width: 3%;
+      }
    }
 
    &__item:active::before {
-      background-color: var(--color-primary-strong);
+      background-color: var(--color-primary);
    }
 
    &__link:link,
    &__link:visited {
-      color: var(--color-primary-strong);
+      color: var(--color-white);
       text-decoration: none;
       display: block;
       padding: 1.5rem 3rem;
@@ -229,15 +240,16 @@
       }
    }
 
-   &__chatbtn {
+   &__generobtn--homem {
       width: 20rem;
-
       display: flex;
       align-items: center;
       justify-content: space-around;
+      text-decoration: none;
 
-      background-color: $color-primary-white;
-      color: $color-primary-strong;
+      background-color: $color-blue;
+      color: $color-white;
+
       border: none;
       font-family: inherit;
       font-size: 1.5rem;
@@ -255,11 +267,95 @@
       }
 
       &:hover {
-         background-color: $color-primary-light;
+         background-color: $color-blue-light;
       }
 
       &:active {
-         background-color: $color-primary-dark;
+         background-color: $color-blue-strong;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__sharebtn {
+      width: 20rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      background-color: $color-orange;
+      color: $color-white;
+      border: none;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-orange-light;
+      }
+
+      &:active {
+         background-color: $color-orange-strong;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__chatbtn {
+      width: 20rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      background-color: $color-primary-dark;
+      color: $color-white;
+      border: none;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-primary;
+      }
+
+      &:active {
+         background-color: $color-primary-strong;
       }
 
       @media only screen and (max-width: $bp-seven) {
@@ -303,6 +399,49 @@
 
       &:active {
          background-color: $color-green-dark;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__logoutbtn {
+      width: 20rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      background-color: $color-red-light;
+      color: $color-white;
+      border: none;
+      border-radius: o;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-red-light;
+      }
+
+      &:active {
+         background-color: $color-red-strong;
       }
 
       @media only screen and (max-width: $bp-seven) {
