--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -1,11 +1,9 @@
 footer.footer
-    .footer__logo
-        img(src='/imagens/lalitaa/lalitaa_logo_black.png' alt='Lalitaa Logo') 
-    ul.footer__nav
-        li: a(href='#') Sobre nós
-        li: a(href='#') Download Apps
-        li: a(href='#') Torna-te num vendedor
-        li: a(href='#') Carreiras
-        li: a(href='#') Privacidade
-        li: a(href='#') Termos
-    p.footer__copyright &copy; Por Mateus Neto
+  ul.nav
+    li.nav__item: a.nav__link(href='#') Arte para todos os gostos
+    li.nav__item: a.nav__link(href='#') Fazer Pedido
+    li.nav__item: a.nav__link(href='#') Redes Sociais
+    li.nav__item: a.nav__link(href='#') Contacte-nos
+    li.nav__item: a.nav__link(href='#') Enviar Arte
+    li.nav__item: a.nav__link(href='#') Trabalhe Connosco
+  p.copyright: | &copy; Criado Por &ldquo;CLILINE - A sua clinica online&rdquo;, todos os deireitos Reservados.
