--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -29,6 +29,12 @@ grey 2: #989c94
   --color-gold: rgb(255, 215, 0);
   --color-gold-light: rgb(255, 230, 89);
   --color-gold-strong: rgb(192, 163, 0);
+  --color-orange: rgb(255, 166, 0);
+  --color-orange-light: rgb(248, 188, 76);
+  --color-orange-strong: rgb(173, 113, 0);
+  --color-red: rgb(255, 0, 0);
+  --color-red-light: rgb(255, 89, 89);
+  --color-red-strong: rgb(173, 0, 0);
   --color-blue: rgb(0, 191, 255);
   --color-blue-light: rgb(102, 217, 255);
   --color-blue-strong: rgb(8, 149, 196);
@@ -65,6 +71,9 @@ body {
   background-color: var(--color-main-back);
   background-size: cover;
   background-repeat: no-repeat; }
+
+a {
+  text-decoration: none; }
 
 .container {
   background-color: var(--color-main-back); }
@@ -128,9 +137,12 @@ body {
       grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(11rem, 1fr) [full-end]; } }
 
 .main {
-  background-color: #8d8f8d;
-  padding: 8rem 6rem;
-  position: relative; }
+  display: flex;
+  position: relative;
+  padding-top: 5rem; }
+  @media only screen and (max-width: 43.75rem) {
+    .main {
+      padding-right: 9rem; } }
 
 .form {
   display: flex;
@@ -278,6 +290,9 @@ body {
     height: 100%;
     display: flex;
     align-items: center; }
+  .user-nav__link {
+    display: flex;
+    align-items: center; }
   .user-nav__icon-box {
     position: relative; }
     .user-nav__icon-box:hover {
@@ -322,9 +337,12 @@ body {
       fill: #9e747e;
       height: 2rem;
       width: 2rem; }
-  @media only screen and (max-width: 33.125rem) {
-    .user-nav__user span {
-      display: none; } }
+  .user-nav__user {
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    background-color: white; }
+    @media only screen and (max-width: 33.125rem) {
+      .user-nav__user span {
+        display: none; } }
   .user-nav__user-photo {
     box-shadow: var(--shadow-2);
     height: 3.75rem;
@@ -335,7 +353,7 @@ body {
 
 .sidebar {
   z-index: 10;
-  background-color: var(--color-primary-white);
+  background-color: #9e747e;
   margin-top: 7rem;
   flex: 0 0 15%;
   display: flex;
@@ -363,25 +381,32 @@ body {
     transition: all 0.2s; }
     .side-nav__item:not(:last-child) {
       margin-bottom: 0.5rem; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__item:not(:last-child) {
+        margin-bottom: 0.5rem; } }
   .side-nav__item::before {
-    box-shadow: var(--shadow-2);
+    box-shadow: var(--shadow);
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 0px;
-    background-color: var(--color-primary);
+    background-color: var(--color-white);
     transform-origin: left;
     transform: scaleX(0);
     transition: all 0.2s; }
   .side-nav__item:hover::before, .side-nav__item--active::before {
     transform: scaleX(1);
     width: 3%; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__item:hover::before, .side-nav__item--active::before {
+        transform: scaleX(2);
+        width: 3%; } }
   .side-nav__item:active::before {
-    background-color: var(--color-primary-strong); }
+    background-color: var(--color-primary); }
   .side-nav__link:link, .side-nav__link:visited {
-    color: var(--color-primary-strong);
+    color: var(--color-white);
     text-decoration: none;
     display: block;
     padding: 1.5rem 3rem;
@@ -495,13 +520,74 @@ body {
         width: 9rem; }
         .side-nav__criarLoja span {
           display: none; } }
+  .side-nav__generobtn--homem {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-decoration: none;
+    background-color: deepskyblue;
+    color: white;
+    border: none;
+    font-family: inherit;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+    .side-nav__generobtn--homem svg {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .side-nav__generobtn--homem:hover {
+      background-color: #66d9ff; }
+    .side-nav__generobtn--homem:active {
+      background-color: #0895c4; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__generobtn--homem {
+        padding-right: 2rem;
+        width: 9rem; }
+        .side-nav__generobtn--homem span {
+          display: none; } }
+  .side-nav__sharebtn {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #ffa600;
+    color: white;
+    border: none;
+    font-family: inherit;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+    .side-nav__sharebtn svg {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .side-nav__sharebtn:hover {
+      background-color: #f8bc4c; }
+    .side-nav__sharebtn:active {
+      background-color: #ad7100; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__sharebtn {
+        padding-right: 2rem;
+        width: 9rem; }
+        .side-nav__sharebtn span {
+          display: none; } }
   .side-nav__chatbtn {
     width: 20rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #fcf0f2;
-    color: #9e747e;
+    background-color: #d6a5ae;
+    color: white;
     border: none;
     font-family: inherit;
     font-size: 1.5rem;
@@ -516,9 +602,9 @@ body {
       width: 2rem;
       margin-right: 1rem; }
     .side-nav__chatbtn:hover {
-      background-color: #fcdce4; }
+      background-color: #ffc0cb; }
     .side-nav__chatbtn:active {
-      background-color: #d6a5ae; }
+      background-color: #9e747e; }
     @media only screen and (max-width: 43.75rem) {
       .side-nav__chatbtn {
         padding-right: 2rem;
@@ -555,6 +641,37 @@ body {
         padding-right: 2rem;
         width: 9rem; }
         .side-nav__callbtn span {
+          display: none; } }
+  .side-nav__logoutbtn {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #ff5959;
+    color: white;
+    border: none;
+    border-radius: o;
+    font-family: inherit;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+    .side-nav__logoutbtn svg {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .side-nav__logoutbtn:hover {
+      background-color: #ff5959; }
+    .side-nav__logoutbtn:active {
+      background-color: #ad0000; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__logoutbtn {
+        padding-right: 2rem;
+        width: 9rem; }
+        .side-nav__logoutbtn span {
           display: none; } }
 
 .stores {
@@ -603,7 +720,7 @@ body {
   .store__like {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    fill: #ffc0cb;
+    fill: #9e747e;
     height: 2.5rem;
     width: 2.5rem;
     z-index: 2;
@@ -718,7 +835,7 @@ body {
   .produto__like {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    fill: #ffc0cb;
+    fill: #9e747e;
     height: 2.5rem;
     width: 2.5rem;
     z-index: 2;
@@ -796,6 +913,28 @@ body {
    z-index: 2;
    margin-bottom: 2rem;*/ }
 
+.save-password__btn {
+  background-color: var(--color-primary-strong);
+  color: var(--color-white);
+  justify-items: end;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  border-radius: 2px; }
+  .save-password__btn:hover {
+    background-color: #d6a5ae; }
+  .save-password__btn:active {
+    background-color: #9e747e; }
+
+.save-details__btn {
+  background-color: var(--color-primary-strong);
+  color: var(--color-white);
+  justify-items: end;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  border-radius: 2px; }
+  .save-details__btn:hover {
+    background-color: #d6a5ae; }
+  .save-details__btn:active {
+    background-color: #9e747e; }
+
 .login__btn {
   background-color: var(--color-primary-strong);
   color: var(--color-white);
@@ -806,6 +945,27 @@ body {
     background-color: #d6a5ae; }
   .login__btn:active {
     background-color: #9e747e; }
+
+.signup__btn {
+  margin-top: 1rem;
+  background-color: #c0a300;
+  border-radius: 2px;
+  color: white; }
+  .signup__btn:hover {
+    background-color: gold; }
+  .signup__btn:active {
+    background-color: #c0a300; }
+
+.signup__form {
+  margin: 6rem auto;
+  max-width: 55rem;
+  background-color: white;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  padding: 5rem 7rem;
+  border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .userDashboard {
   grid-column: sidebar-end/center-end;
