--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'parts/gallery';
 @import 'parts/footer';
 @import 'parts/login';
+@import 'parts/signup';
 
 @import 'parts/userDashboard';
 
