--- a/public/sass/parts/_stores.scss
+++ b/public/sass/parts/_stores.scss
@@ -33,7 +33,7 @@
    &__like {
       grid-row: 1 / 2;
       grid-column: 2 / 3;
-      fill: $color-primary;
+      fill: $color-primary-strong;
       height: 2.5rem;
       width: 2.5rem;
       z-index: 2;
