--- a/views/base.pug
+++ b/views/base.pug
@@ -5,26 +5,39 @@ html(lang='en')
             meta(charset='UTF-8')
             meta(name='viewport' content='width=device-width, initial-scale=1.0')
             meta(http-equiv='X-UA-Compatible' content='ie=edge')
-            //-change for prod '/css/style.css'
-            link(rel="stylesheet", href="/css/style.css")
-            //- /imagens/lalitaa/favicons/favicon.ico
-            link(rel='icon' type='image/x-icon' href='../public/imagens/Lalitaa/favicons/favicon.ico') 
-            link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900')
-            title _ CLILINE - #{title}
-    body(data-alert=`${alert ? alert:''}`)
+            link(href='https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap' rel='stylesheet')
+            link(rel='stylesheet' href='/css/estilo.css')
+            link(rel='stylesheet' href='/intl-tel-input-master/build/css/intlTelInput.css')
+            script(src='/intl-tel-input-master/build/js/intlTelInput.js')
+            link(rel='shortcut icon' href='/imagens/Lalitaa/favicons/favicon.ico' type='image/x-icon')
+        if loja
+            title #{loja.nome}
+        else
+            title Lalitaa - #{title}
+
+    body
         //Header
         include _header
+        //SIDEBAR
+        include _sidebar
         //Content
         block content
             h1 This is a placeholder heading
         //Footer
-        include _footer
+        //include _footer 
+        script(src='/js/bundle.js')
 
-        //Exposes axios object
-        //- script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js") 
 
-        //- script(src="/js/mapbox.js")
-        
-        //- script(src="/js/login.js")
-        //-script(src='https://js.stripe.com/v3/')
-        script(src="/js/bundle.js")
+        //- script(src='/js/userLogin.js')
+        //- script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.js")
+        //- script.
+        //-     var input = document.querySelector('#numeroTelemovel');
+        //-     intlTelInput(input, {
+        //-     onlyCountries: ['AO'],
+        //-     initialCountry: 'AO',
+        //-     utilsScript: 'intl-tel-input-master/build/js/utils.js'
+        //-     });
+
+
+
+        //-(data-alert=`${alert ? alert:''}`)
