--- a/public/sass/parts/_signup.scss
+++ b/public/sass/parts/_signup.scss
@@ -24,3 +24,15 @@
    flex-direction: column;
    align-items: center;
 }
+
+.donoLojaSignup__form {
+   margin: 6rem auto;
+   max-width: 55rem;
+   background-color: rgb(255, 255, 255);
+   box-shadow: $shadow-2;
+   padding: 5rem 7rem;
+   border-radius: 2px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
