--- a/views/_header.pug
+++ b/views/_header.pug
@@ -23,7 +23,16 @@ header.header
           a.user-nav__link(href='/me')
             img.user-nav__user-photo(src=`/imagens/dev/usuarios/${usuario.fotografia}` alt='user photo')
             span.user-nav__user-name= usuario.nome.split(' ')[0]
-      else
+      if storeOwner
+        .user-nav__icon-box
+          svg.user-nav__icon
+            use(xlink:href='/imagens/dev/sprite.svg#icon-message-square')
+          span.user-nav__notification 7
+        .user-nav__user
+          a.user-nav__link(href='/donoloja/me')
+            img.user-nav__user-photo(src=`/imagens/dev/usuarios/${storeOwner.fotografia}` alt='user photo')
+            span.user-nav__user-name= storeOwner.nome.split(' ')[0]
+      if (!usuario && !storeOwner && url !=='/entrar')
         .user-nav__icon-box
           svg.user-nav__icon
             use(xlink:href='/imagens/dev/sprite2.svg#icon-heart')
@@ -32,7 +41,10 @@ header.header
             use(xlink:href='/imagens/dev/sprite.svg#icon-shopping-cart')
           span.user-nav__notification 4
         a.user-nav__loginbtn(href='/entrar')
-            span ENTRAR
+            span Entrar
+      if (url==='/entrar')    
+        a.user-nav__donolojaLoginbtn(href='/donolojaentrar')
+            span Dono loja
 
 
 
